fixed vh4-50 Insufficient color contrast

--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -7,7 +7,7 @@
 /* Header Section */
 
 header {
-  background-color: var(--color-primary-white);
+  background: #EDF3F8 0% 0% no-repeat padding-box;
   padding-inline: 25px;
   padding-bottom: 75px;
 }
@@ -73,7 +73,7 @@ header p.hero-note {
 }
 
 header p.hero-note a {
-  color: var(--color-secondary-text);
+  color: #42525C;
   font-weight: bold;
 }
 
